--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
             </aside>
             <div class="intro_video">
                 <video controls controlsList="nodownload">
-                    <source src="./video/introduction.mp4" type="video/mp4">
+                    <!-- <source src="https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d" type="video/mp4">
+                    <video crossorigin="anonymous" preload="auto" src="blob:https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d"></video> -->
+                    <source src="http://20.24.85.205/video/introduction.mp4">
                 </video>
             </div>
             
