--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
                 </nav>
             </aside>
             <div class="intro_video">
-                <video controls controlsList="nodownload">
-                    <!-- <source src="https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d" type="video/mp4">
-                    <video crossorigin="anonymous" preload="auto" src="blob:https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d"></video> -->
-                    <source src="http://20.24.85.205/video/introduction.mp4">
-                </video>
+                <iframe src="./video.html" frameborder="0"></iframe>
             </div>
             
         </article>
