--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </nav>
             </aside>
             <div class="intro_video">
-                <iframe src="./video.html" frameborder="0"></iframe>
+                <iframe src="http://20.24.85.205/video.html" frameborder="0"></iframe>
             </div>
             
         </article>
