--- a/video.html
+++ b/video.html
@@ -14,7 +14,7 @@
     <video controls controlsList="nodownload">
         <!-- <source src="https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d" type="video/mp4">
         <video crossorigin="anonymous" preload="auto" src="blob:https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d"></video> -->
-        <source src="http://20.24.85.205/video/introduction.mp4">
+        <source src="/video/introduction.mp4">
         <!-- <iframe src="http://20.24.85.205/video/introduction.mp4" frameborder="0"></iframe> -->
     </video>
 </body>
