--- a/video.html
+++ b/video.html
@@ -11,11 +11,14 @@
     }
 </style>
 <body>
-    <video controls controlsList="nodownload">
-        <!-- <source src="https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d" type="video/mp4">
-        <video crossorigin="anonymous" preload="auto" src="blob:https://www.bilibili.com/191c8a5a-c9c6-4287-ba1b-2733c800261d"></video> -->
+    <!-- <video controls controlsList="nodownload">
         <source src="/video/introduction.mp4">
-        <!-- <iframe src="http://20.24.85.205/video/introduction.mp4" frameborder="0"></iframe> -->
-    </video>
+    </video> -->
+    
 </body>
+<script>
+    window.onload = function() {
+      window.location.href = "http://20.24.85.205/video.html";
+    };
+  </script>
 </html>
