--- a/video.html
+++ b/video.html
@@ -17,8 +17,8 @@
     
 </body>
 <script>
-    window.onload = function() {
-      window.location.href = "http://20.24.85.205/video.html";
-    };
+    // window.onload = function() {
+    //   window.location.href = "http://20.24.85.205/video.html";
+    // };
   </script>
 </html>
