--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                 </nav>
             </aside>
             <div class="intro_video">
-                <iframe src="/video.html" frameborder="0"></iframe>
+                <!-- <iframe src="/video.html" frameborder="0"></iframe> -->
+                <video controls controlsList="nodownload">
+                    <source src="https://20.24.85.205/video/introduction.mp4">
+                </video>
             </div>
             
         </article>
@@ -131,9 +134,4 @@
         </footer>
     </main>
 </body>
-<script>
-    window.onload = function() {
-      window.location.href = "http://20.24.85.205/video.html";
-    };
-</script>
 </html>
