--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                 </nav>
             </aside>
             <div class="intro_video">
-                <!-- <iframe src="/video.html" frameborder="0"></iframe> -->
-                <video controls controlsList="nodownload">
+                <iframe src="//player.bilibili.com/player.html?bvid=BV1xj411C7PH&page=1&high_quality=1&danmaku=0" allowfullscreen="allowfullscreen" width="100%" height="500" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts">
+                    
+                </iframe>
+                <!-- <video controls controlsList="nodownload">
                     <source src="https://20.24.85.205/video/introduction.mp4">
-                </video>
+                </video> -->
             </div>
             
         </article>
